--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,7 @@ cython_debug/
 #.idea/
 
 # End of https://www.toptal.com/developers/gitignore/api/django
+
+
+# macOS‚É‚æ‚Á‚Ä¶¬‚³‚ê‚éƒtƒ@ƒCƒ‹
+.DS_Store
