--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,30 @@ version: "3"
 services:
     daphne:
         build: ./daphne
-        restart: always
-        image: daphne:20.1.0
         container_name: daphne
+        env_file:
+            - ".env"
+        volumes:
+            - ./daphne:{APP_ROOT}
+            - static:${STATIC_ROOT}
+            - media:${MEDIA_ROOT}
+        restart: always
+    nginx:
+        image: nginx
+        env_file:
+            - ".env"
+        volumes:
+            - ./nginx/nginx.conf:/etc/nginx/templates/default.conf.template
+            - static:${STATIC_ROOT}
+            - media:${MEDIA_ROOT}
+        links:
+            - daphne
+        ports:
+            - 80:80
+        restart: always
+
+volumes:
+    static:
+        driver: local
+    media:
+        driver: local
