--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
         env_file:
             - ".env"
         volumes:
-            - ./daphne:{APP_ROOT}
+            - ./daphne:${APP_ROOT}
             - static:${STATIC_ROOT}
             - media:${MEDIA_ROOT}
         restart: always
@@ -22,7 +22,7 @@ services:
         links:
             - daphne
         ports:
-            - 80:80
+            - 8081:80
         restart: always
 
 volumes:
