--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 version: "3"
 
 services:
+    db:
+      image: postgres
+      env_file:
+        - ".env"
+      expose:
+        - "5432"
+      restart: always
+
     daphne:
         build: ./daphne
         container_name: daphne
@@ -10,7 +18,12 @@ services:
             - ./daphne:${APP_ROOT}
             - static:${STATIC_ROOT}
             - media:${MEDIA_ROOT}
+        expose:
+            - "8000"
+        depends_on:
+          - db
         restart: always
+
     nginx:
         image: nginx
         env_file:
@@ -25,8 +38,18 @@ services:
             - 80:80
         restart: always
 
+    redis:
+      image: redis:7
+      env_file:
+        - ".env"
+      restart: always
+
 volumes:
     static:
         driver: local
     media:
         driver: local
+    redis:
+        driver: local
+    db:
+      driver: local
