--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,8 +15,11 @@ proxy_set_header X-Forwarded-Proto $scheme;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
 server {
-    listen 80;
+    listen 443 ssl;
     server_name ${SERVER_NAME};
+
+    ssl_certificate /etc/nginx/certs/${SERVER_NAME}.crt;
+    ssl_certificate_key /etc/nginx/certs/${SERVER_NAME}.key;
 
     location / {
         proxy_pass http://daphne:8000/;
