nginxの設定を変更

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,3 +29,9 @@ server {
         alias ${STATIC_ROOT}/;
     }
 }
+
+server {
+    listen 80;
+    server_name ${SERVER_NAME};
+    return 301 https://${SERVER_NAME}$request_uri;
+}
