--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,8 +18,8 @@ server {
     listen 443 ssl;
     server_name ${SERVER_NAME};
 
-    ssl_certificate /etc/nginx/certs/${SERVER_NAME}.crt;
-    ssl_certificate_key /etc/nginx/certs/${SERVER_NAME}.key;
+    ssl_certificate /etc/letsencrypt/live/${SERVER_NAME}/fullcahin.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${SERVER_NAME}/privkey.pem;
 
     location / {
         proxy_pass http://daphne:8000/;
