certbotに自動的に証明書を発行させるようにproduction用のdocker-composeを編集　nginx.conf内のタイポを修正

--- a/docker-compose-prd.yml
+++ b/docker-compose-prd.yml
@@ -38,6 +38,8 @@ services:
         ports:
             - 80:80
         restart: always
+        depends_on:
+          - certbot
 
     redis:
       image: redis:7
@@ -47,8 +49,11 @@ services:
 
     certbot:
       image: certbot/certbot:v1.7.0
+      env_file:
+        - ".env"
       volumes:
         - /etc/letsencrypt:/etc/letsencrypt
+      command: certbot certonly --standalone -d ${SERVER_NAME} --email ${EMAIL_ADDRESS} --agree-tos --no-eff-email
 
 volumes:
     static:
