--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,7 +18,7 @@ server {
     listen 443 ssl;
     server_name ${SERVER_NAME};
 
-    ssl_certificate /etc/letsencrypt/live/${SERVER_NAME}/fullcahin.pem;
+    ssl_certificate /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/${SERVER_NAME}/privkey.pem;
 
     location / {
