--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,13 +10,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Startup containers
-        run: |
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > private_key
-          chmod 600 ./private_key
-          ssh -i ./private_key -t ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}
-          cd ${{ secrets.SERVER_DEPLOY_DIR }}
-          git checkout main
-          git pull
-          sudo docker-compose -f docker-compose-prd.yml up -d
+      - name: Deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          port: 22
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd ${{ secrets.SERVER_DEPLOY_DIR }}
+            git pull origin main
+            sudo docker-compose -f docker-compose-prd.yml up -d
