--- a/daphne/requirements.txt
+++ b/daphne/requirements.txt
@@ -32,3 +32,6 @@ tzdata==2022.2
 zope.interface==5.4.0
 djangorestframework==3.14.0
 django-filter==23.2
+boto3==1.28.65
+botocore==1.31.65
+django-storages==1.14.2
